@@ -33,14 +33,14 @@ zbar_libzbar_la_SOURCES += zbar/decoder/pdf417.h zbar/decoder/pdf417.c \
     zbar/decoder/pdf417_hash.h
 endif
 if ENABLE_QRCODE
-zbar_libzbar_la_SOURCES += zbar/decoder/qrcode.h \
+zbar_libzbar_la_SOURCES += zbar/qrcode.h \
     zbar/decoder/qr_finder.h zbar/decoder/qr_finder.c \
-    zbar/decoder/qrcode/qrdec.c zbar/decoder/qrcode/qrdectxt.c \
-    zbar/decoder/qrcode/rs.h zbar/decoder/qrcode/rs.c \
-    zbar/decoder/qrcode/isaac.h zbar/decoder/qrcode/isaac.c \
-    zbar/decoder/qrcode/bch15_5.h zbar/decoder/qrcode/bch15_5.c \
-    zbar/decoder/qrcode/binarize.h zbar/decoder/qrcode/binarize.c \
-    zbar/decoder/qrcode/util.h zbar/decoder/qrcode/util.c
+    zbar/qrcode/qrdec.c zbar/qrcode/qrdectxt.c \
+    zbar/qrcode/rs.h zbar/qrcode/rs.c \
+    zbar/qrcode/isaac.h zbar/qrcode/isaac.c \
+    zbar/qrcode/bch15_5.h zbar/qrcode/bch15_5.c \
+    zbar/qrcode/binarize.h zbar/qrcode/binarize.c \
+    zbar/qrcode/util.h zbar/qrcode/util.c
 endif
 
 if WIN32
